// Copyright 2021 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.model;
option go_package = "github.com/pipe-cd/pipe/pkg/model";

import "validate/validate.proto";

message Tag {
  string id = 1 [(validate.rules).string.min_len = 1];
  string name = 2 [(validate.rules).string.min_len = 1];
  string project_id = 3 [(validate.rules).string.min_len = 1];

  // Whether the tag is disabled or not.
  bool disabled = 100;
  // Unix time when the tag is created.
  int64 created_at = 101 [(validate.rules).int64.gt = 0];
  // Unix time of the last time when the tag is updated.
  int64 updated_at = 102 [(validate.rules).int64.gt = 0];
}
